meta-tyan: meta-s7106: Fix temperature sensor names
This change corrects the temperature sensor names in hwmon to all lower
case to match the definition in the ipmi-sensor-inventory.

Signed-off-by: Oskar Senft <osk@google.com>

--- a/meta-tyan/meta-s7106/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/bus@1e78a000/i2c-bus@40/nct7802@28.conf
+++ b/meta-tyan/meta-s7106/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/bus@1e78a000/i2c-bus@40/nct7802@28.conf
@@ -1,4 +1,4 @@
-LABEL_temp1=SYS_Air_Inlet
-LABEL_temp2=MB_Air_Inlet
-LABEL_temp3=SYS_Air_Outlet
-LABEL_temp4=PCH_Temp
+LABEL_temp1=sys_air_inlet
+LABEL_temp2=mb_air_inlet
+LABEL_temp3=sys_air_outlet
+LABEL_temp4=pch_temp
